--- a/GAN_Fashion_MNIST.ipynb
+++ b/GAN_Fashion_MNIST.ipynb
@@ -156,16 +156,16 @@
         "      total_disc_loss = (fake_loss + real_loss)/2\n",
         "    grades = disc_tape.gradient(total_disc_loss,Discriminator.trainable_weights)\n",
         "    opt_disc.apply_gradients(zip(grades,Discriminator.trainable_weights))\n",
-        "    # print(len(grades))\n",
+        "    print("Discriminator loss : ")\n,
         "    print(total_disc_loss)\n",
+        
         "    #training of Generator \n",
         "    with tf.GradientTape() as gen_tape:\n",
         "      gen_fake = Generator(random_latent_vectors)\n",
         "      output = Discriminator(gen_fake)\n",
         "      total_gen_loss = loss_func(tf.ones(shape=(batchsize,1)),output)\n",
         "    grades = gen_tape.gradient(total_gen_loss,Generator.trainable_weights)\n",
-        "    # print(grades)\n",
-        "    # print(grades)\n",
+        "    print("Generator loss : ")\n,
         "    print(total_gen_loss)\n",
         "    opt_gen.apply_gradients(zip(grades,Generator.trainable_weights))\n",
         "\n",
